{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 362,
  "lineage": "9b76c70d-3f2d-9158-7323-4513198bb4a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0569d5f339b10ce2a",
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:elastic-ip/eipalloc-0569d5f339b10ce2a",
            "domain": "vpc",
            "id": "eipalloc-0569d5f339b10ce2a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-234-160.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.234.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "raku_bastion_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4aea45b3eeb94be",
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:instance/i-04d19a9ab798b607e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d19a9ab798b607e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "raku-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab8f7f057770d200",
            "private_dns": "ip-10-0-10-250.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.250",
            "public_ip": "43.201.255.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf708368dc5270a6",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d2da0d6c53db079b"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08a6d7b1273db2c49",
            "tags": {
              "Name": "raku-bastion-nat"
            },
            "tags_all": {
              "Name": "raku-bastion-nat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2da0d6c53db079b"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.raku_pub01_2a",
            "aws_vpc.raku_vpc",
            "data.aws_ami.bastion_nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raku_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:internet-gateway/igw-0b16ff72763bb72c0",
            "id": "igw-0b16ff72763bb72c0",
            "owner_id": "941377151595",
            "tags": {
              "Name": "raku-igw"
            },
            "tags_all": {
              "Name": "raku-igw"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "raku_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0569d5f339b10ce2a",
            "association_id": "eipassoc-01ee214519418010e",
            "connectivity_type": "public",
            "id": "nat-0504f300464cb84df",
            "network_interface_id": "eni-07a018f6d2cc47aea",
            "private_ip": "10.0.10.117",
            "public_ip": "43.201.234.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08a6d7b1273db2c49",
            "tags": {
              "Name": "raku-natgw"
            },
            "tags_all": {
              "Name": "raku-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eip_natgw",
            "aws_internet_gateway.raku_igw",
            "aws_subnet.raku_pub01_2a",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raku_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:route-table/rtb-01914edb77303d449",
            "id": "rtb-01914edb77303d449",
            "owner_id": "941377151595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b16ff72763bb72c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raku-pub-rt"
            },
            "tags_all": {
              "Name": "raku-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.raku_igw",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raku_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:route-table/rtb-073df5ae1d71e312f",
            "id": "rtb-073df5ae1d71e312f",
            "owner_id": "941377151595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0504f300464cb84df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raku-pvt-rt"
            },
            "tags_all": {
              "Name": "raku-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw",
            "aws_internet_gateway.raku_igw",
            "aws_nat_gateway.raku_natgw",
            "aws_subnet.raku_pub01_2a",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b72bc1cc20da8b0",
            "route_table_id": "rtb-01914edb77303d449",
            "subnet_id": "subnet-08a6d7b1273db2c49"
          },
          "dependencies": [
            "aws_internet_gateway.raku_igw",
            "aws_route_table.raku_pub_rt",
            "aws_subnet.raku_pub01_2a",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0163ab33a48be7c53",
            "route_table_id": "rtb-073df5ae1d71e312f",
            "subnet_id": "subnet-086a24fc6aaa7afd4"
          },
          "dependencies": [
            "aws_eip.eip_natgw",
            "aws_internet_gateway.raku_igw",
            "aws_nat_gateway.raku_natgw",
            "aws_route_table.raku_pvt_rt",
            "aws_subnet.raku_pub01_2a",
            "aws_subnet.raku_pvt01_2c",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b0ddd9b990b3ba4",
            "route_table_id": "rtb-073df5ae1d71e312f",
            "subnet_id": "subnet-0bed4ba59f8b847a6"
          },
          "dependencies": [
            "aws_eip.eip_natgw",
            "aws_internet_gateway.raku_igw",
            "aws_nat_gateway.raku_natgw",
            "aws_route_table.raku_pvt_rt",
            "aws_subnet.raku_pub01_2a",
            "aws_subnet.raku_pvt02_2a",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-0d2da0d6c53db079b",
            "description": "Allow traffic for the bastion server",
            "egress": [],
            "id": "sg-0d2da0d6c53db079b",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "941377151595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-039fa6f1e9b5ccc22",
            "description": "Allow traffic for a cluster",
            "egress": [],
            "id": "sg-039fa6f1e9b5ccc22",
            "ingress": [],
            "name": "cluster-sg",
            "name_prefix": "",
            "owner_id": "941377151595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-sg"
            },
            "tags_all": {
              "Name": "cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-0cbaa9bf570730b7f",
            "description": "Allow traffic for a master_node",
            "egress": [],
            "id": "sg-0cbaa9bf570730b7f",
            "ingress": [],
            "name": "master-sg",
            "name_prefix": "",
            "owner_id": "941377151595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "master-sg"
            },
            "tags_all": {
              "Name": "master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_grp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-0b4edc052fbdfb85b",
            "description": "Allow traffic for a node group",
            "egress": [],
            "id": "sg-0b4edc052fbdfb85b",
            "ingress": [],
            "name": "node-grp-sg",
            "name_prefix": "",
            "owner_id": "941377151595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-grp-sg"
            },
            "tags_all": {
              "Name": "node-grp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:security-group/sg-09be96634cbe2b203",
            "description": "Allow traffic for the redis server",
            "egress": [],
            "id": "sg-09be96634cbe2b203",
            "ingress": [],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "941377151595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-sg"
            },
            "tags_all": {
              "Name": "redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-949229387",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d2da0d6c53db079b",
            "security_group_rule_id": "sgr-00a698a86f39264a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-149101761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d2da0d6c53db079b",
            "security_group_rule_id": "sgr-05b766034e79c0811",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_allow_egress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3203670056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d2da0d6c53db079b",
            "security_group_rule_id": "sgr-0f987175ecc31e9fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_allow_ingress_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1784451032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-039fa6f1e9b5ccc22",
            "security_group_rule_id": "sgr-0bb2c9fe279f0374a",
            "self": false,
            "source_security_group_id": "sg-0d2da0d6c53db079b",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.cluster_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_allow_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-4110098416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbaa9bf570730b7f",
            "security_group_rule_id": "sgr-029dce12870f783c4",
            "self": false,
            "source_security_group_id": "sg-0b4edc052fbdfb85b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2493017644",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbaa9bf570730b7f",
            "security_group_rule_id": "sgr-03ba2cbed9ceab9d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_allow_etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-3990163460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbaa9bf570730b7f",
            "security_group_rule_id": "sgr-085a7546ffd33cf5e",
            "self": false,
            "source_security_group_id": "sg-0b4edc052fbdfb85b",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2828171551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbaa9bf570730b7f",
            "security_group_rule_id": "sgr-0d4b354aa260e56a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_allow_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3782902133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbaa9bf570730b7f",
            "security_group_rule_id": "sgr-068cb4ba457236fce",
            "self": false,
            "source_security_group_id": "sg-0b4edc052fbdfb85b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3234030101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4edc052fbdfb85b",
            "security_group_rule_id": "sgr-069e68e757ef09333",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_allow_ingress_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3794042847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4edc052fbdfb85b",
            "security_group_rule_id": "sgr-0a846ed38e1741b1d",
            "self": false,
            "source_security_group_id": "sg-039fa6f1e9b5ccc22",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cluster_sg",
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_allow_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-2069940059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4edc052fbdfb85b",
            "security_group_rule_id": "sgr-00255f003c3dfaa92",
            "self": false,
            "source_security_group_id": "sg-0cbaa9bf570730b7f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.master_sg",
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_allow_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-339067381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4edc052fbdfb85b",
            "security_group_rule_id": "sgr-09d1ddadcd3b3d81f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node_grp_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3176396218",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09be96634cbe2b203",
            "security_group_rule_id": "sgr-065c332a922b68c6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6379,
            "id": "sgrule-2282899666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09be96634cbe2b203",
            "security_group_rule_id": "sgr-053583d758a9b3957",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis_sg",
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raku_pub01_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-08a6d7b1273db2c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a6d7b1273db2c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "raku-pub01-2a"
            },
            "tags_all": {
              "Name": "raku-pub01-2a"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raku_pvt01_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-086a24fc6aaa7afd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086a24fc6aaa7afd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "raku-pvt01-2c"
            },
            "tags_all": {
              "Name": "raku-pvt01-2c"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "raku_pvt02_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:subnet/subnet-0bed4ba59f8b847a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed4ba59f8b847a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941377151595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "raku-pvt02-2a"
            },
            "tags_all": {
              "Name": "raku-pvt02-2a"
            },
            "vpc_id": "vpc-045dfcc38082aa6bf"
          },
          "dependencies": [
            "aws_vpc.raku_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raku_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:941377151595:vpc/vpc-045dfcc38082aa6bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2e84753742d042a",
            "default_route_table_id": "rtb-00484113c85b1a248",
            "default_security_group_id": "sg-0e31a1c1e4446138e",
            "dhcp_options_id": "dopt-0a9c73d1efbecd645",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045dfcc38082aa6bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00484113c85b1a248",
            "owner_id": "941377151595",
            "tags": {
              "Name": "raku-vpc"
            },
            "tags_all": {
              "Name": "raku-vpc"
            }
          }
        }
      ]
    }
  ]
}